--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
     "expo": "~52.0.20",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.6",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-date-picker": "^5.0.8",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-wheel-picker-expo": "^0.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
