--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/slider": "^4.5.5",
     "expo": "~52.0.20",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-color-picker": "^0.6.0",
     "react-native-date-picker": "^5.0.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^3.16.6",
-    "react-native-wheel-picker-expo": "^0.5.4"
+    "react-native-wheel-color-picker": "^1.3.1",
+    "react-native-wheel-picker-expo": "^0.5.4",
+    "reanimated-color-picker": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
